--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex nobis recusandae sunt, molestias cupiditate eos corrupti quo dolor libero cum neque corporis odio facere! Officiis at explicabo vel suscipit sint?</p>
 </body>
 </html>
